--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "bootstrap-icons": "^1.11.3"
   }
 }
