--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "webpack --watch",
     "dev": "webpack serve --open",
     "test": "jest",
-    "test-watch": "jest --watchAll"
+    "test-watch": "jest --watchAll",
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "keywords": [],
   "author": "",
@@ -33,6 +34,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
-    "bootstrap-icons": "^1.11.3"
+    "bootstrap-icons": "^1.11.3",
+    "typed.js": "^2.1.0"
   }
 }
