--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config webpack.prod.js",
     "watch": "webpack --watch",
-    "dev": "webpack serve --open",
+    "dev": "webpack serve --open --config webpack.dev.js",
     "test": "jest",
     "test-watch": "jest --watchAll",
     "deploy": "git subtree push --prefix dist origin gh-pages"
@@ -20,8 +20,10 @@
     "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
+    "mini-css-extract-plugin": "^2.9.0",
     "postcss": "^8.4.39",
     "postcss-import": "^16.1.0",
     "postcss-loader": "^8.1.1",
@@ -30,7 +32,8 @@
     "tailwindcss": "^3.4.5",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^5.0.4",
+    "webpack-merge": "^6.0.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
